# sediment

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: recall_bench.rs
homebrew/: alecto.rb  sediment.rb
src/: access.rs  chunker.rs  consolidation.rs  db.rs  document.rs  embedder.rs  error.rs  graph.rs  item.rs  lib.rs  main.rs  retry.rs
src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
