[package]
name = "sediment-mcp"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/rendro/sediment"
homepage = "https://github.com/rendro/sediment"
authors = ["rendro"]
description = "Semantic memory for AI agents - local-first, MCP-native"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "memory", "semantic-search", "ai-agent", "embeddings"]
categories = ["command-line-utilities", "database"]

[lib]
name = "sediment"
path = "src/lib.rs"

[[bin]]
name = "sediment"
path = "src/main.rs"

[dependencies]
# Database - LanceDB for vector storage
lancedb = "0.17"
# Arrow crates - must match lancedb's version (v53)
arrow-array = "53"
arrow-schema = "53"

# Embeddings - using candle for simpler integration
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.4"
tokenizers = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
dialoguer = "0.11"

# Access tracking
rusqlite = { version = "0.31", features = ["bundled"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand = "0.8"

[[bench]]
name = "recall_bench"
harness = false
